--- a/views/hospital.ejs
+++ b/views/hospital.ejs
@@ -24,14 +24,14 @@
             console.error('Error:', error);
           });
     </script>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <p>hospital module</p>
     <div id="login-div">
+      <div id="header-conteiner">
+        <p>Hospital module</p>
+      </div>
       <input id="hospId" placeholder="Hospital ID"><br><br>
       <input id="password" placeholder="Password" type="password"><br><br>
       <input id="btn" value="Sing Up" type="button" onclick="location='#'">
-      <input value="Cancel" type="button" onclick="location='/'">
+      <input id="btn" value="Cancel" type="button" onclick="location='/'">
     </div>
   </body>
 </html>
