--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,44 @@
 body {
-  padding: 50px;
+  /* padding: 50px; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  box-sizing: border-box;
+  background-color: #00B7FF;
 }
 
-a {
-  color: #00B7FF;
+p {
+  font-family: sans-serif;
+  font-size: large;
+  text-align: center;
+}
+
+#login-div {
+  border: 3px solid #f00;
+  padding: 30px;
+  position: absolute;
+  left: 35%;
+  top: 35%;
+}
+
+#header-container {
+  font-family: sans-serif;
+  font-size: large;
+}
+
+#hospId {
+  border-radius: 10%;
+  height: 30px;
+  width: 300px;
+}
+
+#password {
+  border-radius: 10%;
+  height: 30px;
+  width: 300px;
+}
+
+#btn {
+  height: 30px;
+  width: 150px;
+  background-color: whitesmoke;
+  cursor:  pointer;
 }
