--- a/views/pharm-module.ejs
+++ b/views/pharm-module.ejs
@@ -3,6 +3,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel='stylesheet' href='/stylesheets/pharm-module.css' />
 	<title>Document</title>
 </head>
 <body>
@@ -25,8 +26,10 @@
 				console.error('Error:', error);
 			});
 	</script>
-	<p>Pharmacy module</p>
 	<div id="pharm-div">
+		<div id="heder-container">
+			<p>Pharmacy module</p>
+		</div>
 		<input id="pharm-id" placeholder="Pharmacy ID" ><br><br>
 		<input id="password" placeholder="Password" type="password"><br><br>
 		<input id="btn" value="Sing Up" type="button" onclick="location='#'">
